--- a/4_Projetos_OpenSource/0_SISWEB-Frontend/multi_pages/form_page.html
+++ b/4_Projetos_OpenSource/0_SISWEB-Frontend/multi_pages/form_page.html
@@ -149,13 +149,51 @@
                         <li class="breadcrumb-item active">Painel Inicial</li>
                     </ol>
                     <!-- escreva o conteúdo aqui -->
-                    <div style="text-align: center;">
-                        <h2>FORM</h2>
-                        <form action="#" onsubmit="testeForm(); return false">
-                            <p>Usuário <input type="text"></p>
-                            <p>Senha <input type="password"></p>
-                            <button type="submit">Cadastrar</button>
-                        </form>
+                    <div class="text-center">
+                        <div style="margin: 5% 15% 2% 15%;">
+                            <form action="#" onsubmit="testeForm(); return false">
+                                <div class="row mb-3">
+                                    <div class="col-md-6">
+                                        <div class="form-floating mb-3 mb-md-0">
+                                            <input class="form-control" id="inputFirstName" type="text"
+                                                placeholder="Enter your first name" />
+                                            <label for="inputFirstName">First name</label>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <div class="form-floating">
+                                            <input class="form-control" id="inputLastName" type="text"
+                                                placeholder="Enter your last name" />
+                                            <label for="inputLastName">Last name</label>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="form-floating mb-3">
+                                    <input class="form-control" id="inputEmail" type="email"
+                                        placeholder="name@example.com" />
+                                    <label for="inputEmail">Email address</label>
+                                </div>
+                                <div class="row mb-3">
+                                    <div class="col-md-6">
+                                        <div class="form-floating mb-3 mb-md-0">
+                                            <input class="form-control" id="inputPassword" type="password"
+                                                placeholder="Create a password" />
+                                            <label for="inputPassword">Password</label>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <div class="form-floating mb-3 mb-md-0">
+                                            <input class="form-control" id="inputPasswordConfirm" type="password"
+                                                placeholder="Confirm password" />
+                                            <label for="inputPasswordConfirm">Confirm Password</label>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="mt-2 mb-4">
+                                    <button class="btn btn-primary" type="submit">Create Account</button>
+                                </div>
+                            </form>
+                        </div>
                     </div>
                     <!-- fim do conteúdo aqui -->
                 </div>
