--- a/4_Projetos_OpenSource/0_SISWEB-Frontend/pages_login/password.html
+++ b/4_Projetos_OpenSource/0_SISWEB-Frontend/pages_login/password.html
@@ -22,25 +22,26 @@
                         <div class="col-lg-5 teste">
                             <div class="card shadow-lg border-0 rounded-lg mt-5">
                                 <div class="card-header">
-                                    <h3 class="text-center font-weight-light my-4">Password Recovery</h3>
+                                    <h3 class="text-center font-weight-light my-4">Recuperar Senha</h3>
                                 </div>
                                 <div class="card-body">
-                                    <div class="small mb-3 text-muted">Enter your email address and we will send you a
-                                        link to reset your password.</div>
+                                    <div class="small mb-3 text-muted">Informe o seu endereço de email e enviaremos para
+                                        você um link para resetar a sua senha.</div>
                                     <form>
                                         <div class="form-floating mb-3">
                                             <input class="form-control" id="inputEmail" type="email"
                                                 placeholder="name@example.com" />
-                                            <label for="inputEmail">Email address</label>
+                                            <label for="inputEmail">Email</label>
                                         </div>
                                         <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
-                                            <a class="small" href="login.html">Return to login</a>
-                                            <a class="btn btn-primary" href="login.html">Reset Password</a>
+                                            <a class="small" href="login.html">Voltar para o login</a>
+                                            <a class="btn btn-primary" href="login.html">Resetar Senha</a>
                                         </div>
                                     </form>
                                 </div>
                                 <div class="card-footer text-center py-3">
-                                    <div class="small"><a href="register.html">Need an account? Sign up!</a></div>
+                                    <div class="small"><a href="register.html">Precisa de uma conta? Cadastre-se!</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
