--- a/4_Projetos_OpenSource/0_SISWEB-Frontend/pages_login/register.html
+++ b/4_Projetos_OpenSource/0_SISWEB-Frontend/pages_login/register.html
@@ -22,7 +22,7 @@
                         <div class="col-lg-7 teste">
                             <div class="card shadow-lg border-0 rounded-lg mt-5">
                                 <div class="card-header">
-                                    <h3 class="text-center font-weight-light my-4">Create Account</h3>
+                                    <h3 class="text-center font-weight-light my-4">Criar uma Conta</h3>
                                 </div>
                                 <div class="card-body">
                                     <form>
@@ -31,46 +31,47 @@
                                                 <div class="form-floating mb-3 mb-md-0">
                                                     <input class="form-control" id="inputFirstName" type="text"
                                                         placeholder="Enter your first name" />
-                                                    <label for="inputFirstName">First name</label>
+                                                    <label for="inputFirstName">Nome</label>
                                                 </div>
                                             </div>
                                             <div class="col-md-6">
                                                 <div class="form-floating">
                                                     <input class="form-control" id="inputLastName" type="text"
                                                         placeholder="Enter your last name" />
-                                                    <label for="inputLastName">Last name</label>
+                                                    <label for="inputLastName">Sobrenome</label>
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="form-floating mb-3">
                                             <input class="form-control" id="inputEmail" type="email"
                                                 placeholder="name@example.com" />
-                                            <label for="inputEmail">Email address</label>
+                                            <label for="inputEmail">Email</label>
                                         </div>
                                         <div class="row mb-3">
                                             <div class="col-md-6">
                                                 <div class="form-floating mb-3 mb-md-0">
                                                     <input class="form-control" id="inputPassword" type="password"
                                                         placeholder="Create a password" />
-                                                    <label for="inputPassword">Password</label>
+                                                    <label for="inputPassword">Senha</label>
                                                 </div>
                                             </div>
                                             <div class="col-md-6">
                                                 <div class="form-floating mb-3 mb-md-0">
                                                     <input class="form-control" id="inputPasswordConfirm"
                                                         type="password" placeholder="Confirm password" />
-                                                    <label for="inputPasswordConfirm">Confirm Password</label>
+                                                    <label for="inputPasswordConfirm">Confirme a Senha</label>
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="mt-4 mb-0">
                                             <div class="d-grid"><a class="btn btn-primary btn-block"
-                                                    href="login.html">Create Account</a></div>
+                                                    href="login.html">Criar uma conta</a></div>
                                         </div>
                                     </form>
                                 </div>
                                 <div class="card-footer text-center py-3">
-                                    <div class="small"><a href="login.html">Have an account? Go to login</a></div>
+                                    <div class="small"><a href="login.html">Já possui uma conta? Clique para entrar</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
