--- a/4_Projetos_OpenSource/0_SISWEB-Frontend/multi_pages/form_page.html
+++ b/4_Projetos_OpenSource/0_SISWEB-Frontend/multi_pages/form_page.html
@@ -159,41 +159,42 @@
                                     <div class="col-md-6">
                                         <div class="form-floating mb-3 mb-md-0">
                                             <input class="form-control" id="inputFirstName" type="text"
-                                                placeholder="Enter your first name" />
-                                            <label for="inputFirstName">First name</label>
+                                                placeholder="Digite o seu nome" />
+                                            <label for="inputFirstName">Digite o seu nome</label>
                                         </div>
                                     </div>
                                     <div class="col-md-6">
                                         <div class="form-floating">
                                             <input class="form-control" id="inputLastName" type="text"
-                                                placeholder="Enter your last name" />
-                                            <label for="inputLastName">Last name</label>
+                                                placeholder="Digite o seu sobrenome" />
+                                            <label for="inputLastName">Digite o seu sobrenome</label>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="form-floating mb-3">
                                     <input class="form-control" id="inputEmail" type="email"
                                         placeholder="name@example.com" />
-                                    <label for="inputEmail">Email address</label>
+                                    <label for="inputEmail">Email</label>
                                 </div>
                                 <div class="row mb-3">
                                     <div class="col-md-6">
                                         <div class="form-floating mb-3 mb-md-0">
                                             <input class="form-control" id="inputPassword" type="password"
                                                 placeholder="Create a password" />
-                                            <label for="inputPassword">Password</label>
+                                            <label for="inputPassword">Senha</label>
                                         </div>
                                     </div>
                                     <div class="col-md-6">
                                         <div class="form-floating mb-3 mb-md-0">
                                             <input class="form-control" id="inputPasswordConfirm" type="password"
                                                 placeholder="Confirm password" />
-                                            <label for="inputPasswordConfirm">Confirm Password</label>
+                                            <label for="inputPasswordConfirm">Confirme a senha</label>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="mt-2 mb-4">
-                                    <button class="btn btn-primary" type="submit">Create Account</button>
+                                    <button class="btn btn-primary" type="submit"> <a href="../index.html">Create
+                                            Account</a></button>
                                 </div>
                             </form>
                         </div>
