--- a/0_Javascript/1_Javascript_LP_Parte2/09_CPF_RG_Mascara/index.html
+++ b/0_Javascript/1_Javascript_LP_Parte2/09_CPF_RG_Mascara/index.html
@@ -23,7 +23,7 @@
 
   <p>Informe o seu RG<span style="color: red"> *</span>:</p>
 
-  <input id="RG" type="text" name="RG" maxlength="13" placeholder="1234567891012" />
+  <input id="RG" type="text" name="RG" maxlength="13" placeholder="1234567891-012" />
 
   <br />
   <br />
