--- a/0_Javascript/1_Javascript_LP_Parte2/10_Ex_CPF_RG-RegExp/index.html
+++ b/0_Javascript/1_Javascript_LP_Parte2/10_Ex_CPF_RG-RegExp/index.html
@@ -15,11 +15,11 @@
 
   <p>Informe o seu CPF<span style="color: red"> *</span>:</p>
 
-  <input id="inputCPF" onkeypress="mascara(this,cpf)" maxlength="14" placeholder="123.456.789-10" />
+  <input id="inputCPF" onkeydown="mascara(this,cpf)" maxlength="14" placeholder="123.456.789-10" />
 
   <p>Informe o seu RG<span style="color: red"> *</span>:</p>
 
-  <input id="inputRG" onkeypress="mascara(this,rg)" maxlength="13" placeholder="1234567891012" />
+  <input id="inputRG" onkeydown="alert('teste');" maxlength="13" placeholder="1234567891012" />
 
   <br />
   <br />
