--- a/4_Projetos_OpenSource/0_SISWEB-Frontend/pages_http_status/404.html
+++ b/4_Projetos_OpenSource/0_SISWEB-Frontend/pages_http_status/404.html
@@ -21,7 +21,7 @@
                     <div class="row justify-content-center">
                         <div class="col-lg-6">
                             <div class="text-center mt-4">
-                                <img class="mb-4 img-error" src="../assets/img/error-404-monochrome.svg" />
+                                <h1 class="display-1">404</h1>
                                 <p class="lead">This requested URL was not found on this server.</p>
                                 <a href="../index.html">
                                     <i class="fas fa-arrow-left me-1"></i>
@@ -37,11 +37,11 @@
             <footer class="py-4 bg-light mt-auto">
                 <div class="container-fluid px-4">
                     <div class="d-flex align-items-center justify-content-between small">
-                        <div class="text-muted">Copyright &copy; Your Website 2021</div>
+                        <div class="text-muted">Copyright &copy; hugonbr 2021</div>
                         <div>
-                            <a href="#">Privacy Policy</a>
+                            <a href="#">Política de Privacidade</a>
                             &middot;
-                            <a href="#">Terms &amp; Conditions</a>
+                            <a href="#">Termos &amp; Condições</a>
                         </div>
                     </div>
                 </div>
