--- a/0_Javascript/1_Javascript_LP_Parte2/10_Ex_CPF_RG-RegExp/index.html
+++ b/0_Javascript/1_Javascript_LP_Parte2/10_Ex_CPF_RG-RegExp/index.html
@@ -19,7 +19,7 @@
 
   <p>Informe o seu RG<span style="color: red"> *</span>:</p>
 
-  <input id="inputRG" onkeydown="alert('teste');" maxlength="13" placeholder="1234567891012" />
+  <input id="inputRG" onkeydown="mascara(this,rg)" maxlength="13" placeholder="1234567891012" />
 
   <br />
   <br />
