--- a/0_Javascript/1_Javascript_LP_Parte2/09_CPF_RG_Mascara/index.html
+++ b/0_Javascript/1_Javascript_LP_Parte2/09_CPF_RG_Mascara/index.html
@@ -6,10 +6,6 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Document</title>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-  <script type="text/javascript"
-    src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.0/jquery.mask.js"></script>
-
 </head>
 
 <body>
@@ -17,7 +13,7 @@
 
   <p style="color: red">* Preencha pelo menos um dos campos abaixo.</p>
 
-  <p>Informe o seu CPF<span style="color: red"> *</span>:</p>
+  <p>Informe o seu CPF <span style="color: red;">*</span>:</p>
 
   <input id="CPF" type="text" name="CPF" maxlength="14" placeholder="123.456.789-10" />
 
@@ -34,7 +30,13 @@
   <p id="cpf"></p>
   <p id="rg"></p>
 
+  <!-- jquery -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  <script type="text/javascript"
+    src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.0/jquery.mask.js"></script>
+  <!--  -->
   <script src="myScript.js"></script>
+
 </body>
 
 </html>
