--- a/0_FRONT_Javascript/_Projetos_FRONT/0_SearchJS/index.html
+++ b/0_FRONT_Javascript/_Projetos_FRONT/0_SearchJS/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,23 +10,25 @@
     <!-- Add icon library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
+
 <body>
     <h2>Central de Buscadores</h2>
     <div id="home">
 
-    <h2 id="h_1">Digite uma Pesquisa: </h2>
-    <input id="isearch" type="text" style="text-align: center;">
-    <p></p>
-    <button id="bsearch" onclick="search()"><i class="fa fa-search"></i> Pesquisar</button>
-    <button onclick="limpar()"><i class="fa fa-trash"></i> Limpar</button>
+        <h2 id="h_1">Digite uma Pesquisa: </h2>
+        <input id="isearch" type="text" style="text-align: center;">
+        <p></p>
+        <button id="bsearch" onclick="search()"><span class="fa fa-search"></span> Pesquisar</button>
+        <button onclick="limpar()"><span class="fa fa-trash"></span> Limpar</button>
 
-    <!-- <i class="far fa-search"></i> -->
+        <!-- <i class="far fa-search"></i> -->
 
-    <h3 id="google"><br></h3>
-    <h3 id="bing"><br></h3>
-    <h3 id="duckduckgo"><br></h3>
-    
+        <h3 id="google"><br></h3>
+        <h3 id="bing"><br></h3>
+        <h3 id="duckduckgo"><br></h3>
+
     </div>
     <script src="script.js"></script>
 </body>
+
 </html>
