--- a/6_OpenSource/0_temp_bootstrap/index.html
+++ b/6_OpenSource/0_temp_bootstrap/index.html
@@ -8,9 +8,16 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="style.css">
+    <!-- Add icon library -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
+
+    <!-- Back to top button -->
+    <button type="button" class="btn btn-danger btn-floating btn-lg" id="btn-back-to-top">
+        <i class="fa fa-arrow-up"></i>
+    </button>
 
     <div class="p-5 bg-primary text-white text-center">
         <h1>My First Bootstrap 5 Page</h1>
@@ -268,6 +275,8 @@
         <!-- Copyright -->
     </footer>
     <!-- Footer -->
+
+    <script src="script.js"></script>
 
 </body>
 
