--- a/6_OpenSource_ALL/00_temp_bootstrap/index.html
+++ b/6_OpenSource_ALL/00_temp_bootstrap/index.html
@@ -165,22 +165,22 @@
             <!-- Right -->
             <div>
                 <a href="" class="me-4 text-reset">
-                    <i class="fab fa-facebook-f"></i>
+                    <i class="fa fa-facebook-f"></i>
                 </a>
                 <a href="" class="me-4 text-reset">
-                    <i class="fab fa-twitter"></i>
+                    <i class="fa fa-twitter"></i>
                 </a>
                 <a href="" class="me-4 text-reset">
-                    <i class="fab fa-google"></i>
+                    <i class="fa fa-google"></i>
                 </a>
                 <a href="" class="me-4 text-reset">
-                    <i class="fab fa-instagram"></i>
+                    <i class="fa fa-instagram"></i>
                 </a>
                 <a href="" class="me-4 text-reset">
-                    <i class="fab fa-linkedin"></i>
+                    <i class="fa fa-linkedin"></i>
                 </a>
                 <a href="" class="me-4 text-reset">
-                    <i class="fab fa-github"></i>
+                    <i class="fa fa-github"></i>
                 </a>
             </div>
             <!-- Right -->
@@ -196,7 +196,7 @@
                     <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
                         <!-- Content -->
                         <h6 class="text-uppercase fw-bold mb-4">
-                            <i class="fas fa-gem me-3"></i>Company name
+                            <i class="fa fa-gem me-3"></i>Company name
                         </h6>
                         <p>
                             Here you can use rows and columns to organize your footer content. Lorem ipsum
@@ -253,13 +253,13 @@
                         <h6 class="text-uppercase fw-bold mb-4">
                             Contact
                         </h6>
-                        <p><i class="fas fa-home me-3"></i> New York, NY 10012, US</p>
+                        <p><i class="fa fa-home me-3"></i> New York, NY 10012, US</p>
                         <p>
-                            <i class="fas fa-envelope me-3"></i>
+                            <i class="fa fa-envelope me-3"></i>
                             info@example.com
                         </p>
-                        <p><i class="fas fa-phone me-3"></i> + 01 234 567 88</p>
-                        <p><i class="fas fa-print me-3"></i> + 01 234 567 89</p>
+                        <p><i class="fa fa-phone me-3"></i> + 01 234 567 88</p>
+                        <p><i class="fa fa-print me-3"></i> + 01 234 567 89</p>
                     </div>
                     <!-- Grid column -->
                 </div>
