--- a/6_OpenSource_ALL/01_BootStrap WebSite/index.html
+++ b/6_OpenSource_ALL/01_BootStrap WebSite/index.html
@@ -67,95 +67,135 @@
         </div>
     </nav>
 
-    <div id="main" class="container p-5 my-5 border">
+    <!-- links -->
+    <div id="left" class="container p-5 my-5 border">
         <a href="#">Link 1</a>
         <a href="#">Link 2</a>
         <a href="#">Link 3</a>
         <a href="#">Link 4</a>
     </div>
-    <div id="main" class="container p-5 my-5 border">
-        <h1>Título</h1>
-        <p>Parágrafo 1.</p>
-    </div>
-    <div id="main" class="container p-5 my-5 border">
-        <h1>Título</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae suscipit veniam ipsam fuga praesentium,
-            ut harum quod incidunt ab distinctio! Earum eos necessitatibus animi esse quis quae dolorum qui quaerat.</p>
-    </div>
-    <div id="main" class="container p-5 my-5 border">
-        <h1>Título</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae suscipit veniam ipsam fuga praesentium,
-            ut harum quod incidunt ab distinctio! Earum eos necessitatibus animi esse quis quae dolorum qui quaerat.</p>
-    </div>
-    <div id="main" class="container p-5 my-5 border">
-        <h1>Título</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae suscipit veniam ipsam fuga praesentium,
-            ut harum quod incidunt ab distinctio! Earum eos necessitatibus animi esse quis quae dolorum qui quaerat.</p>
-    </div>
-    <div id="main" class="container p-5 my-5 border">
-        <h1>Título</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae suscipit veniam ipsam fuga praesentium,
-            ut harum quod incidunt ab distinctio! Earum eos necessitatibus animi esse quis quae dolorum qui quaerat.</p>
-    </div>
-    <div id="main" class="container p-5 my-5 border">
-        <h1>Título</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae suscipit veniam ipsam fuga praesentium,
-            ut harum quod incidunt ab distinctio! Earum eos necessitatibus animi esse quis quae dolorum qui quaerat.</p>
-    </div>
-    <div id="main" class="container p-5 my-5 border">
-        <h1>Título</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae suscipit veniam ipsam fuga praesentium,
-            ut harum quod incidunt ab distinctio! Earum eos necessitatibus animi esse quis quae dolorum qui quaerat.</p>
-    </div>
-    <div id="main" class="container p-5 my-5 border">
-        <h1>Título</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae suscipit veniam ipsam fuga praesentium,
-            ut harum quod incidunt ab distinctio! Earum eos necessitatibus animi esse quis quae dolorum qui quaerat.</p>
-    </div>
-    <div id="main" class="container p-5 my-5 border">
-        <h1>Título</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae suscipit veniam ipsam fuga praesentium,
-            ut harum quod incidunt ab distinctio! Earum eos necessitatibus animi esse quis quae dolorum qui quaerat.</p>
-    </div>
-    <div id="main" class="container p-5 my-5 border">
-        <h1>Título</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae suscipit veniam ipsam fuga praesentium,
-            ut harum quod incidunt ab distinctio! Earum eos necessitatibus animi esse quis quae dolorum qui quaerat.</p>
-    </div>
-    <div id="main" class="container p-5 my-5 border">
-        <h1>Título</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae suscipit veniam ipsam fuga praesentium,
-            ut harum quod incidunt ab distinctio! Earum eos necessitatibus animi esse quis quae dolorum qui quaerat.</p>
-    </div>
-    <div id="main" class="container p-5 my-5 border">
-        <h1>Título</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae suscipit veniam ipsam fuga praesentium,
-            ut harum quod incidunt ab distinctio! Earum eos necessitatibus animi esse quis quae dolorum qui quaerat.</p>
-    </div>
-    <div id="main" class="container p-5 my-5 border">
-        <h1>Título</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae suscipit veniam ipsam fuga praesentium,
-            ut harum quod incidunt ab distinctio! Earum eos necessitatibus animi esse quis quae dolorum qui quaerat.</p>
-    </div>
-    <div id="main" class="container p-5 my-5 border">
-        <h1>Título</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae suscipit veniam ipsam fuga praesentium,
-            ut harum quod incidunt ab distinctio! Earum eos necessitatibus animi esse quis quae dolorum qui quaerat.</p>
-    </div>
-    <div id="main" class="container p-5 my-5 border">
-        <h1>Título</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae suscipit veniam ipsam fuga praesentium,
-            ut harum quod incidunt ab distinctio! Earum eos necessitatibus animi esse quis quae dolorum qui quaerat.</p>
-    </div>
-    <div id="main" class="container p-5 my-5 border">
-        <h1>Título</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae suscipit veniam ipsam fuga praesentium,
-            ut harum quod incidunt ab distinctio! Earum eos necessitatibus animi esse quis quae dolorum qui quaerat.</p>
-    </div>
-    <div id="main" class="container p-5 my-5 border">
-        <h1>Título</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae suscipit veniam ipsam fuga praesentium,
-            ut harum quod incidunt ab distinctio! Earum eos necessitatibus animi esse quis quae dolorum qui quaerat.</p>
+
+    <!-- Blocos -->
+
+    <div id="block" class="container p-5 my-5 border">
+
+        <div class="container p-5 my-5 border">
+            <h1>Título</h1>
+            <p>Parágrafo 1.</p>
+        </div>
+        <div class="container p-5 my-5 border">
+            <h1>Título</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae suscipit veniam ipsam fuga
+                praesentium,
+                ut harum quod incidunt ab distinctio! Earum eos necessitatibus animi esse quis quae dolorum qui quaerat.
+            </p>
+        </div>
+        <div class="container p-5 my-5 border">
+            <h1>Título</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae suscipit veniam ipsam fuga
+                praesentium,
+                ut harum quod incidunt ab distinctio! Earum eos necessitatibus animi esse quis quae dolorum qui quaerat.
+            </p>
+        </div>
+        <div class="container p-5 my-5 border">
+            <h1>Título</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae suscipit veniam ipsam fuga
+                praesentium,
+                ut harum quod incidunt ab distinctio! Earum eos necessitatibus animi esse quis quae dolorum qui quaerat.
+            </p>
+        </div>
+        <div class="container p-5 my-5 border">
+            <h1>Título</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae suscipit veniam ipsam fuga
+                praesentium,
+                ut harum quod incidunt ab distinctio! Earum eos necessitatibus animi esse quis quae dolorum qui quaerat.
+            </p>
+        </div>
+        <div class="container p-5 my-5 border">
+            <h1>Título</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae suscipit veniam ipsam fuga
+                praesentium,
+                ut harum quod incidunt ab distinctio! Earum eos necessitatibus animi esse quis quae dolorum qui quaerat.
+            </p>
+        </div>
+        <div class="container p-5 my-5 border">
+            <h1>Título</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae suscipit veniam ipsam fuga
+                praesentium,
+                ut harum quod incidunt ab distinctio! Earum eos necessitatibus animi esse quis quae dolorum qui quaerat.
+            </p>
+        </div>
+        <div class="container p-5 my-5 border">
+            <h1>Título</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae suscipit veniam ipsam fuga
+                praesentium,
+                ut harum quod incidunt ab distinctio! Earum eos necessitatibus animi esse quis quae dolorum qui quaerat.
+            </p>
+        </div>
+        <div class="container p-5 my-5 border">
+            <h1>Título</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae suscipit veniam ipsam fuga
+                praesentium,
+                ut harum quod incidunt ab distinctio! Earum eos necessitatibus animi esse quis quae dolorum qui quaerat.
+            </p>
+        </div>
+        <div class="container p-5 my-5 border">
+            <h1>Título</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae suscipit veniam ipsam fuga
+                praesentium,
+                ut harum quod incidunt ab distinctio! Earum eos necessitatibus animi esse quis quae dolorum qui quaerat.
+            </p>
+        </div>
+        <div class="container p-5 my-5 border">
+            <h1>Título</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae suscipit veniam ipsam fuga
+                praesentium,
+                ut harum quod incidunt ab distinctio! Earum eos necessitatibus animi esse quis quae dolorum qui quaerat.
+            </p>
+        </div>
+        <div class="container p-5 my-5 border">
+            <h1>Título</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae suscipit veniam ipsam fuga
+                praesentium,
+                ut harum quod incidunt ab distinctio! Earum eos necessitatibus animi esse quis quae dolorum qui quaerat.
+            </p>
+        </div>
+        <div class="container p-5 my-5 border">
+            <h1>Título</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae suscipit veniam ipsam fuga
+                praesentium,
+                ut harum quod incidunt ab distinctio! Earum eos necessitatibus animi esse quis quae dolorum qui quaerat.
+            </p>
+        </div>
+        <div class="container p-5 my-5 border">
+            <h1>Título</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae suscipit veniam ipsam fuga
+                praesentium,
+                ut harum quod incidunt ab distinctio! Earum eos necessitatibus animi esse quis quae dolorum qui quaerat.
+            </p>
+        </div>
+        <div class="container p-5 my-5 border">
+            <h1>Título</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae suscipit veniam ipsam fuga
+                praesentium,
+                ut harum quod incidunt ab distinctio! Earum eos necessitatibus animi esse quis quae dolorum qui quaerat.
+            </p>
+        </div>
+        <div class="container p-5 my-5 border">
+            <h1>Título</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae suscipit veniam ipsam fuga
+                praesentium,
+                ut harum quod incidunt ab distinctio! Earum eos necessitatibus animi esse quis quae dolorum qui quaerat.
+            </p>
+        </div>
+        <div class="container p-5 my-5 border">
+            <h1>Título</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae suscipit veniam ipsam fuga
+                praesentium,
+                ut harum quod incidunt ab distinctio! Earum eos necessitatibus animi esse quis quae dolorum qui quaerat.
+            </p>
+        </div>
+
     </div>
 
     <!-- Footer -->
