--- a/6_OpenSource_ALL/01_BootStrap WebSite/index.html
+++ b/6_OpenSource_ALL/01_BootStrap WebSite/index.html
@@ -69,10 +69,18 @@
 
     <!-- links -->
     <div id="left" class="container p-5 my-5 border">
-        <a href="#">Link 1</a>
-        <a href="#">Link 2</a>
-        <a href="#">Link 3</a>
-        <a href="#">Link 4</a>
+        <div class="container p-2 my-2 border">
+            <a href="#">Link 1</a>
+        </div>
+        <div class="container p-2 my-2 border">
+            <a href="#">Link 1</a>
+        </div>
+        <div class="container p-2 my-2 border">
+            <a href="#">Link 1</a>
+        </div>
+        <div class="container p-2 my-2 border">
+            <a href="#">Link 1</a>
+        </div>
     </div>
 
     <!-- Blocos -->
