--- a/6_OpenSource_ALL/01_BootStrap WebSite/index.html
+++ b/6_OpenSource_ALL/01_BootStrap WebSite/index.html
@@ -198,10 +198,7 @@
         </div>
         <div class="container p-5 my-2 border">
             <h1>Título</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae suscipit veniam ipsam fuga
-                praesentium,
-                ut harum quod incidunt ab distinctio! Earum eos necessitatibus animi esse quis quae dolorum qui quaerat.
-            </p>
+            <p>FIM!</p>
         </div>
 
     </div>
