--- a/temp_conding/HTML_CSS_JS_WEBPAGE/index.html
+++ b/temp_conding/HTML_CSS_JS_WEBPAGE/index.html
@@ -15,7 +15,7 @@
         <!-- .navbar__container -->
         <div class="navbar__container">
             <!-- a#nvabar__logo -->
-            <a href="#" id="nvabar__logo">Meu site</a>
+            <a href="#" id="navbar__logo">SITE</a>
             <!-- .navbar__toggle#mobile-menu -->
             <div class="navbar__toggle" id="mobile-menu">
                 <!-- span.bar -->
@@ -47,6 +47,7 @@
             </ul>
         </div>
     </nav>
+    <script src="app.js"></script>
 </body>
 
 </html>
