--- a/temp_conding/1_HTML_CSS_JS_WEBPAGE_FULL/index.html
+++ b/temp_conding/1_HTML_CSS_JS_WEBPAGE_FULL/index.html
@@ -9,15 +9,21 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
         integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
+    <!-- navbar -->
     <!-- nav.navbar -->
     <nav class="navbar">
         <!-- .navbar__container -->
         <div class="navbar__container">
             <!-- a#nvabar__logo -->
-            <a href="#" id="navbar__logo">SITE</a>
+            <a href="#" id="navbar__logo">
+                <i class="fas fa-laptop-code"></i>
+                SITE</a>
             <!-- .navbar__toggle#mobile-menu -->
             <div class="navbar__toggle" id="mobile-menu">
                 <!-- span.bar -->
@@ -49,6 +55,24 @@
             </ul>
         </div>
     </nav>
+
+    <!-- hero -->
+    <div class="main">
+        <div class="main__container">
+            <div class="main__content">
+                <h1>TECNOLOGIAS DE PRÓXIMA</h1>
+                <h2>GERAÇÃO</h2>
+                <p>Deseja conhecer o nosso trabalho?</p>
+                <button class="main__btn">
+                    <a href="#">SIM, quero!</a>
+                </button>
+            </div>
+            <div class="main__img--container">
+                <img src="images/mobile_testing_re_w7yb.svg" alt="pic" id="main__img">
+            </div>
+        </div>
+    </div>
+
     <script src="app.js"></script>
 </body>
 
