--- a/8_temp_conding/1_HTML_CSS_JS_WEBPAGE_FULL/index.html
+++ b/8_temp_conding/1_HTML_CSS_JS_WEBPAGE_FULL/index.html
@@ -73,6 +73,24 @@
         </div>
     </div>
 
+    <!-- Services -->
+
+    <div class="services">
+        <h1>See what the hype is about</h1>
+        <div class="services__container">
+            <div class="services__card">
+                <h2>Expericence Bliss</h2>
+                <p>AI powered technology</p>
+                <button>Get Started</button>
+            </div>
+            <div class="services__card">
+                <h2>Are you Ready?</h2>
+                <p>Take the leap</p>
+                <button>Get Started</button>
+            </div>
+        </div>
+    </div>
+
     <script src="app.js"></script>
 </body>
 
