--- a/8_temp_conding/1_HTML_CSS_JS_WEBPAGE_FULL/index.html
+++ b/8_temp_conding/1_HTML_CSS_JS_WEBPAGE_FULL/index.html
@@ -68,7 +68,7 @@
                 </button>
             </div>
             <div class="main__img--container">
-                <img src="images/mobile_testing_re_w7yb.svg" alt="pic" id="main__img">
+                <img src="images/pic1.svg" alt="pic" id="main__img">
             </div>
         </div>
     </div>
