--- a/8_temp_conding/1_HTML_CSS_JS_WEBPAGE_FULL/index.html
+++ b/8_temp_conding/1_HTML_CSS_JS_WEBPAGE_FULL/index.html
@@ -91,6 +91,70 @@
         </div>
     </div>
 
+    <!-- Footer Section -->
+
+    <div class="footer__container">
+        <div class="footer__links">
+            <div class="footer__link--wrapper">
+                <div class="footer__link--items">
+                    <h2>About Us</h2>
+                    <a href="#">How it works</a>
+                    <a href="#">Testimonals</a>
+                    <a href="#">Careers</a>
+                    <a href="#">Investments</a>
+                    <a href="#">Terms of Services</a>
+                </div>
+                <div class="footer__link--items">
+                    <h2>Contact Us</h2>
+                    <a href="#">Contact</a>
+                    <a href="#">Suport</a>
+                    <a href="#">Destinations</a>
+                    <a href="#">Sporsorships</a>
+                </div>
+            </div>
+            <div class="footer__link--wrapper">
+                <div class="footer__link--items">
+                    <h2>Vídeos</h2>
+                    <a href="#">Submit Video</a>
+                    <a href="#">Ambassadors</a>
+                    <a href="#">Agency</a>
+                    <a href="#">Influencer</a>
+                </div>
+                <div class="footer__link--items">
+                    <h2>Social Media</h2>
+                    <a href="#">Instagram</a>
+                    <a href="#">Facebook</a>
+                    <a href="#">Youtube</a>
+                    <a href="#">Twitter</a>
+                </div>
+            </div>
+        </div>
+        <div class="social__media">
+            <div class="social__media--wrap">
+                <div class="footer__logo">
+                    <a href="#" id="footer__logo"><i class="fas fa-laptop-code"></i>SITE</a>
+                </div>
+                <p class="website__right">
+                    © SITE 2022. All rights reserved.
+                </p>
+                <div class="social__icons">
+                    <a href="#" class="social__icon--link" target="_blank">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a href="#" class="social__icon--link" target="_blank">
+                        <i class="fab fa-facebook"></i>
+                    </a>
+                    <a href="#" class="social__icon--link" target="_blank">
+                        <i class="fab fa-youtube"></i>
+                    </a>
+                    <a href="#" class="social__icon--link" target="_blank">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="app.js"></script>
 </body>
 
