--- a/9_temp_conding/1_HTML_CSS_JS_WEBPAGE_FULL/index.html
+++ b/9_temp_conding/1_HTML_CSS_JS_WEBPAGE_FULL/index.html
@@ -21,7 +21,7 @@
         <!-- .navbar__container -->
         <div class="navbar__container">
             <!-- a#nvabar__logo -->
-            <a href="#" id="navbar__logo">
+            <a href="index.html" id="navbar__logo">
                 <i class="fas fa-laptop-code"></i>
                 SITE</a>
             <!-- .navbar__toggle#mobile-menu -->
@@ -33,7 +33,7 @@
             </div>
             <ul class="navbar__menu">
                 <li class="navbar__item">
-                    <a href="#" class="navbar__links">
+                    <a href="index.html" class="navbar__links">
                         Início
                     </a>
                 </li>
@@ -134,7 +134,7 @@
                 <div class="footer__logo">
                     <a href="#" id="footer__logo"><i class="fas fa-laptop-code"></i>SITE</a>
                 </div>
-                <p class="website__right">
+                <p class="website__rights">
                     © SITE 2022. All rights reserved.
                 </p>
                 <div class="social__icons">
